--- a/spapp/enroll.html
+++ b/spapp/enroll.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="../spapp/css/spinkit.css" rel="stylesheet">
     <link href="../spapp/css/dataTables.bootstrap5.css" rel="stylesheet">
+    
 </head>
 <body>
 <div class="container">
@@ -32,12 +33,6 @@
             <label for="select" class="form-label">Select a trainer :</label>
             <select class="form-select" id="select" name="select">
                 <option selected>Select an option</option>
-                <option value="Athart Rachal">Athart Rachal</option>
-                <option value="John Mcgin">John Mcgin</option>
-                <option value="Wayne Rooney">Wayne Rooney</option>
-                <option value="Elizabeth Mcquenn">Elizabeth Mcquenn</option>
-                <option value="Lisa Welsch">Lisa Welsch</option>
-                <option value="Fabiano Ruiz">Fabiano Ruiz</option>
             </select>
         </div>
 
@@ -81,8 +76,30 @@
 <script src="../spapp/js/dataTables.js"></script>
 <script src="../spapp/js/dataTables.bootstrap5.js"></script>
 <script src="../spapp/js/enroll.js"></script>
+<script src="http://localhost/Kerim123/spapp/js/constants.js"></script>
 
 
-  </body>
+<script>
+    $(document).ready(function() {
+     // Fetch trainers data from backend
+     $.get('http://localhost/Kerim123/gym-backend/get_trainers.php', function(response) {
+         console.log(response); // Log the response to inspect it
+         var trainers = response;
+         // Populate the select dropdown with trainers
+         populateTrainersDropdown(trainers);
+     });
+ });
+ 
+ function populateTrainersDropdown(trainers) {
+     var select = $("#select");
+     select.empty();
+     select.append('<option selected>Select an option</option>');
+     trainers.forEach(function(trainer) {
+         // Concatenate firstName and lastName as the value for the option
+         select.append('<option value="' + trainer.firstName + ' ' + trainer.lastName + '">' + trainer.firstName + ' ' + trainer.lastName + '</option>');
+     });
+ }
+ </script>
+
+</body>
 </html>
-
