--- a/enroll.html
+++ b/enroll.html
@@ -80,8 +80,8 @@
 <script src="spapp/js/jquery.validate.min.js"></script>
 <script src="spapp/js/dataTables.js"></script>
 <script src="spapp/js/dataTables.bootstrap5.js"></script>
-<script src="spapp/js/enroll.js"></script>
-
+<script src="enroll.js"></script>
+<script src="spapp/js/constants.js"></script>
 
   </body>
 </html>
