--- a/spapp/index.html
+++ b/spapp/index.html
@@ -77,7 +77,7 @@
 
     <!-- JavaScript Libraries -->
     
-    <script src="./js/jquery.min.js"></script>
+    <script src="../spapp/js/jquery.min.js"></script>
     <script src="../spapp/js/jquery.spapp.min.js"></script>
     <script src="../spapp/js/rest_client.js"></script>
     <script src="../spapp/js/utils.js"></script>
