--- a/spapp/login/index.html
+++ b/spapp/login/index.html
@@ -1,109 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>Login - Member</title>
-    <link href="./assets/css/all.min.css" rel="stylesheet" />
-    <link href="./assets/css/sb-admin-2.min.css" rel="stylesheet" />
-    <link href="./assets/css/toastr.min.css" rel="stylesheet" />
-  </head>
-  <body class="bg-primary">
-    <div id="layoutAuthentication">
-      <div id="layoutAuthentication_content">
-        <main>
-          <div class="container">
-            <div class="row justify-content-center">
-              <div class="col-lg-5">
-                <div id="login-form-container" class="card shadow-lg border-0 rounded-lg mt-5">
-                  <div class="card-header">
-                    <h3 class="text-center font-weight-light my-4">Login</h3>
-                  </div>
-                  <div class="card-body">
-                    <form id="login-form">
-                      <div class="form-floating mb-3">
-                        <input
-                          class="form-control"
-                          id="email"
-                          type="email"
-                          name="email"
-                          placeholder="name@example.com"
-                        />
-                        <label for="email">Email address</label>
-                      </div>
-                      <div class="form-floating mb-3">
-                        <input
-                          class="form-control"
-                          id="password"
-                          type="password"
-                          name="password"
-                          placeholder="Password"
-                        />
-                        <label for="password">Password</label>
-                      </div>
-                      <div
-                        class="d-flex align-items-center justify-content-between mt-4 mb-0"
-                      >
-                        <button type="submit" class="btn btn-primary" href="index.html">Login</a>
-                      </div>
-                    </form>
-                  </div>
-                  <div class="card-footer text-center py-3">
-                    <div class="small">
-                      <a href="register.html">Need an account? Sign up!</a>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <title>Login - Member</title>
+  <link href="./assets/css/all.min.css" rel="stylesheet" />
+  <link href="./assets/css/sb-admin-2.min.css" rel="stylesheet" />
+  <link href="./assets/css/toastr.min.css" rel="stylesheet" />
+</head>
+<body class="bg-primary">
+  <div id="layoutAuthentication">
+    <div id="layoutAuthentication_content">
+      <main>
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-5">
+              <div id="login-form-container" class="card shadow-lg border-0 rounded-lg mt-5">
+                <div class="card-header">
+                  <h3 class="text-center font-weight-light my-4">Login</h3>
+                </div>
+                <div class="card-body">
+                  <form id="login-form">
+                    <div class="form-floating mb-3">
+                      <input class="form-control" id="email" type="email" name="email" placeholder="name@example.com" />
+                      <label for="email">Email address</label>
                     </div>
+                    <div class="form-floating mb-3">
+                      <input class="form-control" id="password" type="password" name="password" placeholder="Password" />
+                      <label for="password">Password</label>
+                    </div>
+                    <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
+                      <button type="submit" class="btn btn-primary">Login</button>
+                    </div>
+                  </form>
+                </div>
+                <div class="card-footer text-center py-3">
+                  <div class="small">
+                    <a href="register.html">Need an account? Sign up!</a>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </main>
-      </div>
+        </div>
+      </main>
     </div>
-    <script src="./assets/js/jquery.min.js"></script>
-    <script src="./assets/js/bootstrap.bundle.min.js"></script>
-    <script src="./assets/js/jquery.easing.min.js"></script>
-    <script src="./assets/js/sb-admin-2.min.js"></script>
-
-    <script src="./assets/js/jquery.validate.min.js"></script>
-    <script src="./assets/js/additional-methods.min.js"></script>
-    <script src="./assets/js/block-ui.js"></script>
-    <script src="./assets/js/toastr.min.js"></script>
-
-    <script src="./assets/js/constants.js"></script>
-    <script src="./assets/js/utils.js"></script>
-    <script src="./assets/js/form_validation.js"></script>
-    <script src="./assets/js/rest_client.js"></script>
-
-   <script>
+  </div>
+  <script src="./assets/js/jquery.min.js"></script>
+  <script src="./assets/js/bootstrap.bundle.min.js"></script>
+  <script src="./assets/js/jquery.easing.min.js"></script>
+  <script src="./assets/js/sb-admin-2.min.js"></script>
+  <script src="./assets/js/jquery.validate.min.js"></script>
+  <script src="./assets/js/additional-methods.min.js"></script>
+  <script src="./assets/js/block-ui.js"></script>
+  <script src="./assets/js/toastr.min.js"></script>
+  <script src="./assets/js/constants.js"></script>
+  <script src="./assets/js/utils.js"></script>
+  <script src="./assets/js/form_validation.js"></script>
+  <script src="./assets/js/rest_client.js"></script>
+  <script>
     FormValidation.validate("#login-form", {}, function(data) {
-        if(Utils.get_from_localstorage("user")) {
+      if (Utils.get_from_localstorage("user")) {
         window.location = "../";
       }
-        Utils.block_ui("#login-form-container");
+      Utils.block_ui("#login-form-container");
 
-        RestClient.post(  'auth/login',
-          data,
-          function (response) {
-            Utils.unblock_ui("#login-form-container");
-            console.log(response);
-            const userJSON = JSON.stringify(response);
+      RestClient.post('auth/login', data, function(response) {
+        Utils.unblock_ui("#login-form-container");
+        console.log(response);
 
-            Utils.set_to_localstorage("user", userJSON);
-            window.location = "../";
-          },
-            function (error) {
-            Utils.unblock_ui("#login-form-container");s
-            toastr.error(error.responseText);
-          }
-        )
-      });    
-   </script>
-  </body>
+        // Store user object properly
+        Utils.set_to_localstorage("user", response);
+        window.location = "../";
+      }, function(error) {
+        Utils.unblock_ui("#login-form-container");
+        toastr.error(error.responseText);
+      });
+    });
+  </script>
+</body>
 </html>
