--- a/spapp/enroll.html
+++ b/spapp/enroll.html
@@ -51,7 +51,7 @@
             <textarea class="form-control" id="textarea" name="textarea" rows="4"></textarea>
         </div>
 
-        <button type="submit" class="btn btn-primary" onclick="window.location.href = 'http://localhost/Kerim123/spapp/index.html#page1';">Submit</button>
+        <button type="submit" class="btn btn-primary" onclick="window.location.href = 'views/index.html#page1';">Submit</button>
     </form>
 
     
@@ -64,7 +64,7 @@
 <script src="../spapp/js/dataTables.js"></script>
 <script src="../spapp/js/dataTables.bootstrap5.js"></script>
 <script src="../spapp/js/enroll.js"></script>
-<script src="http://localhost/Kerim123/spapp/js/constants.js"></script>
+<script src="../spapp/js/constants.js"></script>
 
 
 <script>
